# nesylink-logic-course-homework

./: .gitignore  README.zh.md  agent.py  pyproject.toml  readme.md  vision_exact.py
docs/: README.md
docs/Mathematical_logic/: readme.md
docs/guides/: env-overview.md  map-creation.md  training-config.md
docs/reference/: env-api.md  rewards.md  tasks-and-validators.md
formalization/: NesyLinkCore.lean  Task1Formalization.lean  Task2Formalization.lean  Task3Formalization.lean  Task4Formalization.lean  Task5Formalization.lean  Task5FormalizationB.lean  lake-manifest.json  lakefile.toml  notes.md  task5.json
nesylink/: README.md  __init__.py  env.py  game.py
nesylink/core/: __init__.py  collision.py  constants.py  events.py  info.py  monsters.py  observation.py  runtime.py  state.py  types.py
nesylink/core/equipment/: __init__.py  defense.py  registry.py  service.py  types.py  weapons.py
nesylink/core/input/: __init__.py  human.py
nesylink/core/mechanics/: __init__.py  combat.py  engine.py  interactions.py  movement.py  progress.py
nesylink/core/rendering/: __init__.py  renderer.py  sprites.py
nesylink/rewards/: __init__.py  base.py  collect_gold.py  collect_key.py  context.py  custom_template.py  exploration.py  kill_monster.py  loader.py  sparse_exit.py
nesylink/tasks/: __init__.py  builtin.py  registry.py  specs.py
nesylink/tools/: export_map.py  migrate_map_schema.py
nesylink/wrappers/: __init__.py  dreamer_env.py  gym_env.py  registry.py
tests/: test_env_entrypoints.py  test_task_registry.py
utils/: evaluate_policy.py  human_play.py
(+15 files in other folders)
