[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nesylink"
version = "0.1.0"
description = "Gymnasium-compatible dungeon reinforcement learning environments."
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.23",
]

[project.optional-dependencies]
dev = []
pygame = ["pygame>=2.5"]
dreamer = ["pillow>=10"]

[tool.setuptools.packages.find]
include = ["nesylink*"]

[tool.setuptools.package-data]
nesylink = ["map_data/dungeons/**/*.json"]
